force-app/main/default/objects/OIP_DependencyNode__c/OIP_DependencyNode__c.object-meta.xml
<CustomObject>
    <fullName>OIP_DependencyNode__c</fullName>
    <label>Dependency Node</label>
    <pluralLabel>Dependency Nodes</pluralLabel>
    <nameField>
        <displayFormat>NODE-{0000}</displayFormat>
        <label>Dependency Node Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>