force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_ComponentType__c.field-meta.xml
<CustomField>
    <fullName>OIP_ComponentType__c</fullName>
    <label>Component Type</label>
    <required>true</required>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>ApexClass</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Flow</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>LWC</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Aura</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>ApexTrigger</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CustomField</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CustomObject</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>ValidationRule</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>RecordType</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>PageLayout</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>PermissionSet</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Profile</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EmailTemplate</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>CustomMetadataType</fullName>
        </picklistValues>
    </picklist>
</CustomField>