force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_DependencyCount__c.field-meta.xml
<CustomField>
    <fullName>OIP_DependencyCount__c</fullName>
    <label>Dependency Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>