force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_DependentCount__c.field-meta.xml
<CustomField>
    <fullName>OIP_DependentCount__c</fullName>
    <label>Dependent Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>