force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_FullName__c.field-meta.xml
<CustomField>
    <fullName>OIP_FullName__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>