force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_IsRootCause__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsRootCause__c</fullName>
    <label>Is Root Cause</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>