force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_LastAnalyzedAt__c.field-meta.xml
<CustomField>
    <fullName>OIP_LastAnalyzedAt__c</fullName>
    <label>Last Analyzed At</label>
    <type>DateTime</type>
</CustomField>