force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_MetadataIndexId__c.field-meta.xml
<CustomField>
    <fullName>OIP_MetadataIndexId__c</fullName>
    <label>Metadata Index</label>
    <referenceTo>OIP_MetadataIndex__c</referenceTo>
    <relationshipLabel>Dependency Nodes</relationshipLabel>
    <relationshipName>DependencyNodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>