force-app/main/default/objects/OIP_DependencyNode__c/fields/OIP_SeverityRating__c.field-meta.xml
<CustomField>
    <fullName>OIP_SeverityRating__c</fullName>
    <label>Severity Rating</label>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>None</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Low</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Medium</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>High</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Critical</fullName>
        </picklistValues>
    </picklist>
</CustomField>